# mcplug

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  knope.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  prepare-release.yml  release.yml
agents/: mcplug-guide.md
commands/: quickstart.md  troubleshoot.md
skills/cli-usage/: SKILL.md
skills/configuration/: SKILL.md
skills/library-api/: SKILL.md
src/: args.rs  error.rs  lib.rs  main.rs  runtime.rs  server_proxy.rs  transport.rs  types.rs
src/cli/: call.rs  config_cmd.rs  connection.rs  list.rs  mod.rs  output.rs
src/codegen/: emit_rs.rs  generate_cli.rs  mod.rs
src/config/: editors.rs  env.rs  loader.rs  mod.rs  types.rs
src/daemon/: manager.rs  mod.rs
src/oauth/: cache.rs  callback.rs  discovery.rs  flow.rs  mod.rs  pkce.rs  token.rs
src/transports/: http_sse.rs  jsonrpc.rs  mod.rs  stdio.rs
tests/: cli_integration.rs  codegen_integration.rs  daemon_integration.rs  runtime_integration.rs
tests/common/: http_mock.rs  mod.rs
tests/fixtures/: mock_mcp_server.rs
