[package]
name = "mcplug"
version = "0.1.0"
edition = "2021"
description = "A Rust toolkit for discovering, calling, and composing MCP servers"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
strsim = "0.11"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
webbrowser = "1"
colored = "3"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
