[package]
name = "mcplug"
version = "0.1.2"
edition = "2021"
description = "A Rust toolkit for discovering, calling, and composing MCP servers"
license = "MIT"
repository = "https://github.com/hydai/mcplug"
homepage = "https://github.com/hydai/mcplug"

[features]
default = []
vendored-openssl = ["openssl/vendored"]
test-fixtures = []

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json", "form"] }
openssl = { version = "0.10", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
strsim = "0.11"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
webbrowser = "1"
colored = "3"
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"

[[test]]
name = "runtime_integration"
path = "tests/runtime_integration.rs"

[[test]]
name = "cli_integration"
path = "tests/cli_integration.rs"

[[test]]
name = "daemon_integration"
path = "tests/daemon_integration.rs"

[[test]]
name = "codegen_integration"
path = "tests/codegen_integration.rs"

[[bin]]
name = "mcplug"
path = "src/main.rs"

[[bin]]
name = "mock_mcp_server"
path = "tests/fixtures/mock_mcp_server.rs"
required-features = ["test-fixtures"]
